blender internal tangent normal bake error #48757

Closed
opened 2016-06-28 16:07:51 +02:00 by nick wolfert · 7 comments

System Information
os: windows 7 64bit
gpu: NVIDIA GTX 570 1.2GB
cpu: AMD Phenom II X6 1050T 2.8Ghz
ram: 16GB

Blender Version
Broken: 2.77 5806268 Tue Jun 28 from builder.blender.org
Worked: 2.77a official

Short description of error
baking the normals from a sphere to a plane using tangent space and active to selected in internal render
Capture.PNG
results in a strange grey patch
error:
normalmap_error.png
correct:
normalmap_correct.png

blend file:normal_bake_error.blend

**System Information** os: windows 7 64bit gpu: NVIDIA GTX 570 1.2GB cpu: AMD Phenom II X6 1050T 2.8Ghz ram: 16GB **Blender Version** Broken: 2.77 5806268 Tue Jun 28 from builder.blender.org Worked: 2.77a official **Short description of error** baking the normals from a sphere to a plane using tangent space and active to selected in internal render ![Capture.PNG](https://archive.blender.org/developer/F318901/Capture.PNG) results in a strange grey patch error: ![normalmap_error.png](https://archive.blender.org/developer/F318897/normalmap_error.png) correct: ![normalmap_correct.png](https://archive.blender.org/developer/F318899/normalmap_correct.png) blend file:[normal_bake_error.blend](https://archive.blender.org/developer/F318903/normal_bake_error.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Nick_w

Added subscriber: @Nick_w

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

Added subscriber: @AlexanderRomanov

Added subscriber: @AlexanderRomanov
Alexander Romanov self-assigned this 2016-06-30 10:15:04 +02:00

Broken in 5abae51a6e

Broken in 5abae51a6e

This issue was referenced by 4b0aeaf327

This issue was referenced by 4b0aeaf327d383ec760171261a1087abbb714d04

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48757
No description provided.