Fix T48757: Broken in D1120 normal baking